--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "dotenv": "^8.2.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
