--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-material-ui-carousel": "^2.1.2",
     "uuid": "^8.3.2"
   }
 }
