--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@cocart/cocart-rest-api": "^1.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "axios": "^0.21.1",
     "cookie-cutter": "^0.2.0",
     "dotenv": "^8.2.0",
     "next": "10.0.5",
