schekaut löppt atze

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^0.21.1",
     "cookie-cutter": "^0.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-material-ui-carousel": "^2.1.2",
+    "stripe": "^8.138.0",
     "uuid": "^8.3.2"
   }
 }
